--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,6 @@ jobs:
     timeout-minutes: 5
     strategy:
       fail-fast: true
-      matrix:
-        go: ["stable", "oldstable"]
 
     steps:
       - name: Check out code
@@ -34,8 +32,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ matrix.go }}
-          check-latest: true
+            go-version-file: 'go.mod'
 
       - name: Go Format
         run: gofmt -s -w . && git diff --exit-code
