--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version: "stable"
-          check-latest: true
+            go-version-file: 'go.mod'
 
       - name: Lint
         uses: golangci/golangci-lint-action@v3.4.0
