--- a/.github/workflows/vuln.yml
+++ b/.github/workflows/vuln.yml
@@ -23,8 +23,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version: "stable"
-          check-latest: true
+            go-version-file: 'go.mod'
 
       - name: Checkout
         uses: actions/checkout@v3
