--- a/.github/workflows/vuln.yml
+++ b/.github/workflows/vuln.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-            go-version-file: 'go.mod'
+          go-version-file: "go.mod"
 
       - name: Checkout
         uses: actions/checkout@v3
