--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,vim,macos,linux,windows,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,visualstudiocode,vim,macos,linux,windows,python
 
-bin/
-
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
@@ -311,3 +309,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,vim,macos,linux,windows,python
+
+dist/
+bin/
+*.sig
